--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.11.3",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
+    "@fullcalendar/list": "^5.11.3",
+    "@fullcalendar/vue": "^5.11.2",
+    "@types/express": "^4.17.13",
     "core-js": "^3.6.5",
+    "fullcalendar": "^5.11.3",
+    "tooltip.js": "^1.3.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
