--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "core-js": "^3.6.5",
     "fullcalendar": "^5.11.3",
     "tooltip.js": "^1.3.3",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-sidebar-menu": "^4.8.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.19",
