--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@fullcalendar/list": "^5.11.3",
     "@fullcalendar/vue": "^5.11.2",
     "@types/express": "^4.17.13",
+    "@vitejs/plugin-vue2": "^2.2.0",
     "core-js": "^3.6.5",
     "fullcalendar": "^5.11.3",
     "tooltip.js": "^1.3.3",
+    "vite": "^4.4.7",
     "vue": "^2.6.11",
     "vue-sidebar-menu": "^4.8.1"
   },
   "devDependencies": {
+    "@rollup/plugin-dsv": "^3.0.2",
     "@vue/cli-plugin-babel": "~4.5.19",
     "@vue/cli-plugin-eslint": "~4.5.19",
     "@vue/cli-service": "~4.5.19",
