--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/vue": "^5.11.2",
     "@types/express": "^4.17.13",
     "@vitejs/plugin-vue2": "^2.2.0",
+    "add-to-calendar-button": "^2.3.4",
     "core-js": "^3.6.5",
     "fullcalendar": "^5.11.3",
     "tooltip.js": "^1.3.3",
